--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
     <head>
         <style>
+            body{
+                margin: 0;
+            }
             table{
                 width: 100%;
                 height: 100%;
+                border-collapse: collapse;
             }
             .A{
                 height: 150px;
@@ -17,12 +21,17 @@
                 height: 150px;
                 background: rgb(192, 107, 246);
             }
+            h1{
+                text-align: center;
+            }
         </style>
     </head>
     <body>
-        <table border=>
+        <table>
             <tr class="A">
-                <td colspan="2">jumta</td>
+                <td colspan="2">
+                    <h1>AROMO</h1>
+                </td>
             </tr>
             <tr>
                 <td class="B">menu</td>
