--- a/index.html
+++ b/index.html
@@ -11,31 +11,53 @@
             }
             .A{
                 height: 150px;
-                background: rgb(192, 107, 246);
+                background: rgb(191, 134, 227);
             }
             .B{
                 width: 300px;
-                background:rgb(246, 148, 28);
+                background:rgb(216, 199, 84);
             }
             .C{
                 height: 150px;
-                background: rgb(192, 107, 246);
+                background: rgb(191, 134, 227);
             }
             h1{
                 text-align: center;
+                color: black;
+                font-size: 60px;
+                margin-top: 35px;
+            }
+            .D{
+                width: 100px;
+                margin-left: 80px;
             }
         </style>
     </head>
     <body>
         <table>
             <tr class="A">
+                <td>
+                    <img class="D" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjfMCi4sEtta1_ZMW9xRGORGcHP8wOXwpA2vhhnxPkcQ&s">
+                </td>
                 <td colspan="2">
-                    <h1>AROMO</h1>
+                    <h1>AROMA</h1>
                 </td>
             </tr>
             <tr>
-                <td class="B">menu</td>
-                <td>kontent</td>
+                <td class="B">
+                    <ul>
+                        <li>
+                            <a href="index.html">galvena lapa</a> 
+                        </li>
+                        <li>
+                            <a href="">lapa</a>
+                            
+                        </li>
+                    </ul>
+                </td>
+                <td>
+
+                </td>
             </tr>
             <tr class="C">
                 <td colspan="2">pagrabs</td>
